--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@types/react": "^17.0.39",
+    "@types/react-native": "^0.67.2",
     "expo": "~44.0.2",
+    "expo-app-loading": "~1.3.0",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "expo-font": "~10.0.4",
+    "expo-asset": "~8.4.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
