--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-native-web-swiper": "^2.2.3",
     "react-query": "^3.34.16",
     "styled-components": "^5.3.3",
-    "expo-linear-gradient": "~11.0.3"
+    "expo-linear-gradient": "~11.0.3",
+    "expo-web-browser": "~10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
